--- a/README.html
+++ b/README.html
@@ -13,3 +13,4 @@ This is a tool (directed towards high school students for now) that allows stude
 - Circumcenter
 - Expansion & Simplification
 - GUI (it's console for now)
+- After/During GUI implementation, add Calculators (Scientific, Regular, etc.)
